addons/networking/kiali/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
  labels:
    sand.pit.im/addon: kiali
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sandpit
      namespace: istio-ingress
  hostnames:
    - kiali.sand.pit.im
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          namespace: istio-system
          port: 20001
